# probably-fine

./: .gitignore  CLAUDE.md  README.md  next-features.md  next-improvements.md  pyproject.toml
probablyfine/: __main__.py  agent.py  aider_session.py  checker.py  cli.py  config.py  console.py  context.py  edit_parser.py  file_selector.py  git_utils.py  interpreter.py  log_utils.py  models.py  modes.py  ollama_utils.py  reflection.py  router.py  tui.py
probablyfine/drm/: __init__.py  budget.py  manager.py  models.py  registry.py  scheduler.py  vram.py  watchdog.py
