[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "probablyfine"
version = "0.1.0"
description = "Terminal AI coding agent with multi-model routing via Ollama"
requires-python = ">=3.10"
dependencies = [
    "ollama",
    "prompt_toolkit>=3.0",
    "rich",
    "tomli; python_version < '3.11'",
]

[project.scripts]
probablyfine = "probablyfine.cli:main"
